--- a/css/pizza.css
+++ b/css/pizza.css
@@ -11,13 +11,20 @@
     text-align:center;
 }
 
-.pizza{
+#pizza{
     height:500px;
     width:500px;
     background-image: url('../images/pizza.jpg');
     background-size: contain;
     background-repeat: no-repeat;
     margin: auto;
+    display:none;
+    position:relative;
+}
+
+#pizza img{
+    position:absolute;
+    width:60px;
 }
 
 .side-menu{
@@ -45,20 +52,9 @@
     margin: 10px;
     width: 300px;
     cursor:pointer;
+    box-sizing: border-box;
 }
 
-.side-menu button#tomatoes{
-    background-image: url("../images/tomatoes.jpg");
-}
-
-.side-menu button#olives{
-    background-image: url("../images/olives.jpg");
-}
-
-.side-menu button#mushrooms{
-    background-image: url("../images/mushrooms.jpg");
-}
-
-.side-menu button#pineapple{
-    background-image: url("../images/pineapple.jpg");
+.side-menu button.selected{
+    border:10px solid red;
 }
