--- a/css/pizza.css
+++ b/css/pizza.css
@@ -49,7 +49,7 @@
     background-color:red;
     font-family: 'Lobster', cursive;
     font-size:40px;
-    margin: 10px;
+    border:10px solid green;
     width: 300px;
     cursor:pointer;
     box-sizing: border-box;
